# RustCrossCompile

./: .gitignore  README.md
rust/: Cargo.toml  config.toml  create-framework.sh
rust/.cargo/: config.toml
rust/sample_math/: Cargo.toml
rust/src/: lib.rs
swift/sample/RustSampleFunctions.xcframework/: Info.plist
swift/sample/RustSampleFunctions.xcframework/ios-arm64-simulator/Headers/: RustSampleFunctions.hh
swift/sample/RustSampleFunctions.xcframework/macos-arm64_x86_64/Headers/: module.modulemap
swift/sample/Sample/: Application.swift  MainView.swift
swift/sample/Sample.xcodeproj/: project.pbxproj
swift/sample/Sample.xcodeproj/project.xcworkspace/xcuserdata/to.xcuserdatad/: UserInterfaceState.xcuserstate
swift/sample/Sample.xcodeproj/xcuserdata/to.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/sample/Sample/Documentation.docc/: Documentation.md
swift/sample/Sample/Headers/: RustBridgeHeader.hh
windows/: WindoesSampleAppNativeMethods.cs  WindowsSample.sln
windows/WindoesSampleApp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  Package.appxmanifest  WindoesSampleApp.csproj  app.manifest
windows/WindoesSampleApp/Properties/: launchSettings.json
